No chat for non pro recruiters

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -71,7 +71,7 @@
 	"arenella-app-cookies-text2": "Die Besucher der Site werden von der Anwendung nicht verfolgt und wir erfassen keine Statistiken über die Besucher der Site.",
 	"arenella-app-cookies-text3": "Wir speichern Informationen über die Personalvermittler, die erforderlich sind, um sie zu identifizieren und zu kontaktieren. Informationen über die Aktionen, die der Personalvermittler durchführt, können gespeichert werden, um Einblicke in die Nutzung der Website durch die einzelnen Personalvermittler zu geben und zur Verbesserung der Website beizutragen. Die Informationen der Personalvermittler werden ohne deren ausdrückliche Zustimmung nicht an Dritte weitergegeben.",
 	"arenella-app-cookies-text4": "Kandidaten werden nur mit ihrer Zustimmung oder mit der Zustimmung des Unternehmens, bei dem sie beschäftigt sind, in das System aufgenommen. Die Kandidateninformationen sind intern im System verfügbar und können auch von den Personalvermittlern heruntergeladen werden, um sie wegen potenziell interessanter Rollen zu kontaktieren. Die Lebensläufe der Kandidaten können ebenfalls von den Personalvermittlern heruntergeladen werden.",
-	"arenella-app-cookies-text5-a": "Durch die Annahme dieser Allgemeinen Geschäftsbedingungen erklärt sich der Personalvermittler damit einverstanden, dass die Nutzung der Website und der über die Website abgerufenen Daten ausschließlich auf sein eigenes Risiko erfolgt. Der Personalvermittler stimmt zu, dass Arenella BV in keiner Weise für negative Folgen für ihn oder sein Unternehmen verantwortlich ist, die sich aus der Nutzung dieser Website oder der darin enthaltenen Daten oder Dateien ergeben.",
+	"arenella-app-cookies-text5-a": "Mit der Annahme dieser Nutzungsbedingungen erklärt sich der Personalvermittler damit einverstanden, dass die Nutzung der Website und der darüber abgerufenen Daten ausschließlich auf eigenes Risiko erfolgt. Der Personalvermittler erklärt sich damit einverstanden, dass die Website und deren Betreiber in keiner Weise für negative Folgen verantwortlich sind, die ihm oder seinem Unternehmen durch die Nutzung dieser Website oder der darin enthaltenen Daten oder Dateien entstehen.",
 	"arenella-app-cookies-text5-b": "Durch die Annahme dieser Geschäftsbedingungen erklärt sich der Personalvermittler damit einverstanden, dass die Verwendung der Kandidatendaten ausschließlich auf die Kontaktaufnahme mit den Kandidaten über potenziell relevante Stellen beschränkt ist, die für den Kandidaten von Interesse sein könnten. Die Kandidatendaten dürfen ohne die ausdrückliche Zustimmung der Kandidaten nicht an Dritte weitergegeben und nicht länger im eigenen System des Personalvermittlers gespeichert werden, als dies für den Abschluss des Rekrutierungsprozesses für den Kandidaten, den er vermitteln möchte, erforderlich ist.",
 	"arenella-app-cookies-text6": "Durch das Hochladen oder Bereitstellen des Lebenslaufs auf der Website hat der Kandidat zugestimmt, dass sein Lebenslauf und seine Informationen mit dem Netzwerk der Personalvermittler geteilt werden, die die Website bereits nutzen und dies auch künftig tun werden. Ein Personalvermittler ist jede Person oder Firma mit einem Konto auf der Website, die nach Kandidaten für eine neue Stelle sucht. Der Kandidat stimmt zu, dass die Personalvermittler auf alle seine auf der Website enthaltenen Informationen zugreifen können, um ihn bei potenziell relevanten Stellenangeboten zu kontaktieren. Informationen werden aus dem Lebenslauf extrahiert und separat auf der Website gespeichert. Diese Informationen können den Personalvermittlern zugänglich gemacht werden.",
 	"arenella-app-cookies-text7": "Die Informationen der Personalvermittler werden für die Dauer ihres Abonnements im System gespeichert. Danach werden ihre Daten entweder gelöscht oder identifizierbare Hinweise auf den Personalvermittler werden ersetzt. Diese Aktualisierung erfolgt regelmäßig, aber wir werden unser Bestes tun, um diese Aktualisierungen so schnell wie möglich vorzunehmen.",
@@ -111,13 +111,15 @@
 	"arenella-app-menu-suggestions": "Kandidaten",
 	"arenella-app-no-credits-text": "Leider haben Sie Ihr Guthaben für diese Woche bereits aufgebraucht. Sie erhalten nächste Woche neues Guthaben.",
 	"arenella-app-no-credits-title": "0 Credits verbleiben",
+	"arenella-app-paid-feature": "Pro-Funktion",
+	"arenella-app-paid-feature-text": "Diese Funktion steht nur Nutzern mit einem kostenpflichtigen Abonnement zur Verfügung.",
 	"arenella-app-validation-errors-text": "Leider war es nicht möglich die Aktionen durchzuführen, da:",
 	"arenella-app-validation-errors-title": "Validierungsfehler",
 	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Firmenanschrift",
-	"arenella-contact-company-name": "Name der Firma",
+	"arenella-contact-company-name": "Name",
 	"arenella-contact-company-registration-email": "Email",
-	"arenella-contact-company-registration-number": "Handelsregisternummer",
+	"arenella-contact-company-registration-number": "Umsatzsteuer-ID",
 	"arenella-contact-title": "Kontakt",
 	"arenella-create-candidate-additional-info-text": "Durch die Angabe dieser optionalen Zusatzinformationen können Sie Ihr Profil\nfür Personalvermittler hervorheben.",
 	"arenella-create-candidate-additional-info-title": "Weitere Informationen",
@@ -161,7 +163,7 @@
 	"arenella-faqs-q1-question": "Fällt für das Abonnement eine Gebühr an?",
 	"arenella-faqs-q4-answer": "Nein. Es fallen keine Margen, Provisionen oder Zusatzkosten an. Wenn Sie sich für das kreditbasierte Abonnement entscheiden, fallen überhaupt keine Kosten an. Wenn Sie sich für das kostenpflichtige Abonnement entscheiden, fallen lediglich die Kosten für das Abonnement selbst an.",
 	"arenella-faqs-q4-question": "Gibt es zusätzliche Kosten?",
-	"arenella-faqs-q5-answer": "Die Rechnung wird von Arenella BV, einem in den Niederlanden registrierten Unternehmen, verschickt.",
+	"arenella-faqs-q5-answer": "Die Rechnung wird von einer in Italien registrierten Partita IVA ausgestellt.",
 	"arenella-faqs-q5-question": "Woher kommt die Rechnung für das abonnement",
 	"arenella-faqs-q6-answer": "Ja. Wenn Sie den Lebenslauf des Kandidaten anzeigen/herunterladen, werden Ihnen seine Kontaktdaten angezeigt. Sie können ihn direkt anrufen.",
 	"arenella-faqs-q6-question": "Kann ich die Kandidaten direkt kontaktieren?",
@@ -610,7 +612,7 @@
 	"arenella-recruiter-signup-subscriptions-text2": "100 % kostenlose Downloads von Lebensläufen und Kontaktdaten verfügbarer IT-Kandidaten",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Zu zahlende Margen",
 	"arenella-recruiter-signup-subscriptions-text4": "0 Zu zahlende Provision",
-	"arenella-recruiter-signup-subscriptions-text5": "Ihr Vertrag kommt direkt mit dem Kandidaten zustande, nicht über Arenella BV",
+	"arenella-recruiter-signup-subscriptions-text5": "Ihr Vertrag wird direkt mit dem Kandidaten geschlossen, nicht über einen Dritten.",
 	"arenella-recruiter-signup-subscriptions-text6": "Die Kandidaten haben ihren Lebenslauf eingereicht und würden sich über einen Anruf von einem Personalvermittler freuen",
 	"arenella-recruiter-signup-subscriptions-text7": "Die Verfügbarkeit der Kandidaten wird alle zwei Wochen überprüft. Die Kandidaten suchen aktiv",
 	"arenella-recruiter-signup-surname": "Nachname",
