--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -71,7 +71,7 @@
 	"arenella-app-cookies-text2": "La aplicación no rastrea al visitante del sitio y no recopilamos estadísticas sobre los visitantes del sitio.",
 	"arenella-app-cookies-text3": "Almacenamos información sobre los reclutadores necesaria para identificarlos y contactarlos. La información sobre las acciones que realiza el reclutador puede almacenarse para brindar información relacionada con el uso que hace cada reclutador del sitio y para ayudar a mejorar el sitio. La información de los reclutadores no se compartirá con terceros sin su consentimiento explícito.",
 	"arenella-app-cookies-text4": "Los candidatos se incorporan al sistema únicamente con su consentimiento o con el consentimiento de la empresa que los emplea. La información de los candidatos está disponible internamente en el sistema y los reclutadores también pueden descargarla para ponerse en contacto con ellos sobre puestos que puedan resultar interesantes. Los reclutadores también pueden descargar los CV de los candidatos.",
-	"arenella-app-cookies-text5-a": "Al aceptar estos Términos y Condiciones, el reclutador acepta que el uso del sitio y los datos a los que se accede a través del mismo se realizan bajo su propio riesgo. El reclutador acepta que Arenella BV no es en ningún caso responsable de las consecuencias negativas que el uso de este sitio o de los datos o archivos que contiene pueda tener para él o su empresa.",
+	"arenella-app-cookies-text5-a": "Al aceptar estos Términos y Condiciones, el reclutador acepta que el uso del sitio y los datos a los que accede a través de él se realiza bajo su propio riesgo. El reclutador acepta que el sitio y su propietario no son responsables de ninguna consecuencia negativa para él o su empresa derivada del uso de este sitio o de los datos o archivos que contiene.",
 	"arenella-app-cookies-text5-b": "Al aceptar estos términos y condiciones, el reclutador acepta que el uso de los datos de los candidatos se limita exclusivamente al uso de contactarlos sobre puestos de trabajo potencialmente relevantes \nque puedan ser de interés para el candidato. Los datos de los candidatos no pueden transmitirse a terceros sin el permiso expreso de los candidatos y no pueden almacenarse en el propio sistema del reclutador \ndurante más tiempo del necesario para completar el proceso de contratación del candidato que se intenta colocar.",
 	"arenella-app-cookies-text6": "Al subir el CV o proporcionarlo al sitio, el Candidato acepta que su CV y su información se compartan con la red de Reclutadores que ya utilizan y utilizarán posteriormente el sitio web. Un Reclutador es cualquier persona o empresa con una cuenta en el sitio web que busca Candidatos para ocupar un nuevo puesto. \nEl Candidato acepta que los Reclutadores puedan acceder a toda su información contenida en el sitio para contactarlo con ofertas de trabajo potencialmente relevantes. La información se extraerá del CV y se almacenará por separado en el sitio. Esta información podrá ponerse a disposición de los Reclutadores.",
 	"arenella-app-cookies-text7": "La información de los reclutadores se almacenará en el sistema durante la duración de sus suscripciones. Después de eso, sus datos se eliminarán o se reemplazarán las referencias identificables al reclutador. Esta actualización será periódica, pero haremos todo lo posible para realizar estas actualizaciones lo más rápido posible.",
@@ -111,13 +111,15 @@
 	"arenella-app-menu-suggestions": "Candidatos",
 	"arenella-app-no-credits-text": "Desafortunadamente has usado tus créditos para esta semana. Recibirás nuevos créditos la próxima semana.",
 	"arenella-app-no-credits-title": "0 créditos restantes",
+	"arenella-app-paid-feature": "Función Pro",
+	"arenella-app-paid-feature-text": "Esta función solo está disponible para usuarios con una suscripción paga.",
 	"arenella-app-validation-errors-text": "Lamentablemente no fue posible realizar las acciones porque:",
 	"arenella-app-validation-errors-title": "Errores de validación",
 	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Dirección de la empresa",
-	"arenella-contact-company-name": "Nombre de empresa",
+	"arenella-contact-company-name": "Nombre",
 	"arenella-contact-company-registration-email": "Correo electrónico",
-	"arenella-contact-company-registration-number": "Número de registro de la compañía",
+	"arenella-contact-company-registration-number": "Número de IVA",
 	"arenella-contact-title": "CONTACTO",
 	"arenella-create-candidate-additional-info-text": "Al proporcionar esta información adicional opcional, ayudarás a crear tu perfil.\ndestacar ante los reclutadores",
 	"arenella-create-candidate-additional-info-title": "Información adicional",
@@ -161,7 +163,7 @@
 	"arenella-faqs-q1-question": "¿Hay algún costo por la suscripción?",
 	"arenella-faqs-q4-answer": "No. No hay márgenes, comisiones ni costes adicionales que pagar. Si te quedas con la suscripción basada en créditos no hay ningún coste. Si eliges la suscripción de pago el único coste es la suscripción en sí.",
 	"arenella-faqs-q4-question": "¿Hay costos adicionales?",
-	"arenella-faqs-q5-answer": "La factura se envía desde Arenella BV, una empresa registrada en los Países Bajos.",
+	"arenella-faqs-q5-answer": "La factura se envía desde una Partita IVA registrada en Italia.",
 	"arenella-faqs-q5-question": "¿De dónde vendrá la factura de la suscripción?",
 	"arenella-faqs-q6-answer": "Sí. Cuando visualices o descargues el CV de los candidatos verás sus datos de contacto. Podrás llamarlos directamente.",
 	"arenella-faqs-q6-question": "¿Puedo contactar directamente a los candidatos?",
@@ -610,7 +612,7 @@
 	"arenella-recruiter-signup-subscriptions-text2": "Descargas 100% gratuitas de CV e información de contacto de candidatos de TI disponibles",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Márgenes a pagar",
 	"arenella-recruiter-signup-subscriptions-text4": "0 Comisión a pagar",
-	"arenella-recruiter-signup-subscriptions-text5": "Su contrato es directo con el candidato, no a través de Arenella BV",
+	"arenella-recruiter-signup-subscriptions-text5": "Su contrato es directo con el candidato, no a través de un tercero.",
 	"arenella-recruiter-signup-subscriptions-text6": "Los candidatos han compartido sus CV y agradecerían una llamada de un reclutador.",
 	"arenella-recruiter-signup-subscriptions-text7": "La disponibilidad de los candidatos se verifica cada dos semanas. Los candidatos están buscando activamente",
 	"arenella-recruiter-signup-surname": "Apellido",
