--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -71,7 +71,7 @@
 	"arenella-app-cookies-text2": "Le visiteur du site n'est pas suivi par l'application et nous ne collectons pas de statistiques sur les visiteurs du site.",
 	"arenella-app-cookies-text3": "Nous stockons les informations sur les recruteurs nécessaires pour les identifier et les contacter. Les informations sur les actions effectuées par le recruteur peuvent être stockées pour fournir un aperçu relatif au\nl'utilisation du site par les recruteurs individuels et pour contribuer à l'amélioration du site. Les informations des recruteurs ne seront pas partagées avec des tiers sans leur consentement explicite.",
 	"arenella-app-cookies-text4": "Les candidats ne sont ajoutés au système qu'avec leur consentement ou via le consentement de l'entreprise qui les emploie. Les informations sur les candidats sont disponibles en interne dans le système et\npeuvent également être téléchargés par les Recruteurs afin de les contacter sur des postes potentiellement intéressants. Les CV des candidats peuvent également être téléchargés par les Recruteurs.",
-	"arenella-app-cookies-text5-a": "En acceptant les présentes Conditions Générales, le recruteur accepte que l'utilisation du site et des données accessibles via le site se fasse entièrement à ses propres risques. Le Recruteur accepte que Arenella BV soit\nen aucun cas responsable des conséquences négatives sur eux ou leur entreprise du fait de l'utilisation de ce site ou des données ou fichiers qu'il contient.",
+	"arenella-app-cookies-text5-a": "En acceptant les présentes conditions générales, le recruteur reconnaît que l'utilisation du site et des données accessibles via celui-ci se fait entièrement à ses propres risques. Le recruteur accepte que le site et son propriétaire ne soient en aucun cas responsables des conséquences négatives que l'utilisation de ce site ou des données et fichiers qui y sont contenus pourrait avoir sur lui ou son entreprise.",
 	"arenella-app-cookies-text5-b": "En acceptant ces termes et conditions, le recruteur accepte que l'utilisation des données des candidats soit limitée à la seule utilisation pour contacter les candidats au sujet d'emplois potentiellement pertinents.\nqui pourrait intéresser le candidat. Les données des Candidats ne peuvent être transmises à des tiers sans l'autorisation expresse des Candidats et ne peuvent pas être stockées dans les locaux propres du Recruteur.\nsystème pendant plus longtemps que nécessaire pour terminer le processus de recrutement du candidat qu’ils tentent de placer.",
 	"arenella-app-cookies-text6": "En téléchargeant le CV ou en le fournissant sur le site, le Candidat a accepté que son CV et ses informations soient partagés avec le réseau de Recruteurs déjà présents et qui le seront.\nutiliser ensuite le site Internet. Un recruteur est toute personne ou entreprise disposant d'un compte sur le site Web et recherchant des candidats à placer dans un nouveau rôle.\nLe Candidat accepte que les Recruteurs puissent accéder à toutes ses informations contenues dans le site afin de le contacter avec des offres d'emploi potentiellement pertinentes. Les informations seront\nextraits du CV et stockés séparément sur le site. Ces informations pourront être rendues accessibles aux Recruteurs.",
 	"arenella-app-cookies-text7": "Les informations des recruteurs seront stockées dans le système pendant la durée de leurs abonnements. Après quoi leurs données seront soit supprimées, soit les références identifiables au recruteur seront\nremplacé. Cette mise à jour sera périodique mais nous ferons de notre mieux pour effectuer ces mises à jour le plus rapidement possible.",
@@ -111,13 +111,15 @@
 	"arenella-app-menu-suggestions": "Candidats",
 	"arenella-app-no-credits-text": "Malheureusement, vous avez utilisé vos crédits pour cette semaine. Vous recevrez de nouveaux crédits la semaine prochaine.",
 	"arenella-app-no-credits-title": "0 crédits restants",
+	"arenella-app-paid-feature": "Función Pro",
+	"arenella-app-paid-feature-text": "Cette fonctionnalité est uniquement disponible pour les utilisateurs disposant d'un abonnement payant.",
 	"arenella-app-validation-errors-text": "Malheureusement, il n'a pas été possible d'effectuer les actions car :",
 	"arenella-app-validation-errors-title": "Erreurs de validation",
 	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Adresse de la société",
-	"arenella-contact-company-name": "Nom de l'entreprise",
+	"arenella-contact-company-name": "Nom",
 	"arenella-contact-company-registration-email": "E-mail",
-	"arenella-contact-company-registration-number": "Numéro d'entreprise",
+	"arenella-contact-company-registration-number": "Numéro de TVA",
 	"arenella-contact-title": "Contact",
 	"arenella-create-candidate-additional-info-text": "En fournissant ces informations complémentaires facultatives, vous contribuerez à vous démarquez auprès des recruteurs.",
 	"arenella-create-candidate-additional-info-title": "Informations Complémentaires",
@@ -161,7 +163,7 @@
 	"arenella-faqs-q1-question": "Y a-t-il des frais pour l'abonnement",
 	"arenella-faqs-q4-answer": "Non. Il n’y a pas de marges, de commissions ou de frais supplémentaires à payer. Si vous vous en tenez à l’abonnement basé sur le crédit, il n’y a aucun frais. Si vous avez choisi l'abonnement payant, le seul coût est l'abonnement lui-même.",
 	"arenella-faqs-q4-question": "Y a-t-il des frais supplémentaires",
-	"arenella-faqs-q5-answer": "La facture est envoyée par Arenella BV, une société néerlandaise enregistrée aux Pays-Bas.",
+	"arenella-faqs-q5-answer": "La facture est émise par une Partita IVA italienne enregistrée.",
 	"arenella-faqs-q5-question": "D'où viendra la facture de l'abonnement",
 	"arenella-faqs-q6-answer": "Oui. Lorsque vous consultez/téléchargez le CV des candidats, vous verrez leurs coordonnées. Vous pouvez les appeler directement.",
 	"arenella-faqs-q6-question": "Puis-je contacter directement les candidats",
@@ -610,7 +612,7 @@
 	"arenella-recruiter-signup-subscriptions-text2": "Téléchargements 100% gratuits des CV et coordonnées des candidats IT disponibles",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Margins à payer",
 	"arenella-recruiter-signup-subscriptions-text4": "0 Commission à payer",
-	"arenella-recruiter-signup-subscriptions-text5": "Votre contrat est direct avec le candidat et non via Arenella BV",
+	"arenella-recruiter-signup-subscriptions-text5": "Votre contrat est conclu directement avec le candidat, sans intermédiaire.",
 	"arenella-recruiter-signup-subscriptions-text6": "Les candidats ont partagé leur CV et apprécieraient un appel d'un recruteur",
 	"arenella-recruiter-signup-subscriptions-text7": "Disponibilité des candidats vérifiée toutes les deux semaines. Les candidats recherchent activement",
 	"arenella-recruiter-signup-surname": "Nom de famille",
