--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -71,7 +71,7 @@
 	"arenella-app-cookies-text2": "Il visitatore del sito non viene tracciato dall'applicazione e non raccogliamo statistiche per i visitatori del sito.",
 	"arenella-app-cookies-text3": "Conserviamo informazioni sui Recruiter necessarie per identificarli e contattarli. Le informazioni sulle azioni eseguite dal recruiter possono essere conservate per fornire informazioni relative all'uso del sito da parte dei singoli recruiter e per contribuire a migliorare il sito. Le informazioni dei Recruiter non saranno condivise con terze parti senza il loro esplicito consenso.",
 	"arenella-app-cookies-text4": "I candidati vengono aggiunti al sistema solo con il loro consenso o tramite il consenso dell'azienda che li impiega. Le informazioni sui candidati sono disponibili internamente nel sistema e possono anche essere scaricate dai Recruiter per contattarli in merito a ruoli potenzialmente interessanti. I CV dei candidati possono anche essere scaricati dai Recruiter.",
-	"arenella-app-cookies-text5-a": "Accettando questi Termini e Condizioni, il reclutatore accetta che l'uso del sito e dei dati a cui si accede tramite il sito sono interamente a proprio rischio. Il Recruiter accetta che Arenella BV non è in alcun modo responsabile per eventuali conseguenze negative su di lui o sulla sua azienda derivanti dall'uso di questo sito o dei dati o file in esso contenuti.",
+	"arenella-app-cookies-text5-a": "Accettando i presenti Termini e Condizioni, il Recruiter accetta che l'utilizzo del sito e dei dati a cui accede tramite il sito è interamente a suo rischio e pericolo. Il Recruiter accetta che il sito e il proprietario del sito non siano in alcun modo responsabili per eventuali conseguenze negative per lui o per la sua azienda derivanti dall'utilizzo di questo sito o dei dati o file in esso contenuti.",
 	"arenella-app-cookies-text5-b": "Accettando questi termini e condizioni, il recruiter accetta che l'uso dei dati del candidato sia limitato al solo utilizzo per contattare i candidati in merito a lavori potenzialmente pertinenti che potrebbero interessare il candidato. I dati del candidato non possono essere trasmessi a terzi senza l'espressa autorizzazione del candidato e non possono essere archiviati nel sistema del recruiter per un periodo più lungo del necessario per completare il processo di reclutamento per il candidato che sta cercando di collocare.",
 	"arenella-app-cookies-text6": "Caricando il CV o fornendolo al sito, il Candidato ha acconsentito a che il suo CV e le sue informazioni vengano condivisi con la rete di Recruiter che già utilizzano e utilizzeranno in seguito il sito web. Un Recruiter è qualsiasi persona o azienda con un account sul sito web che sta cercando Candidati da collocare in un nuovo ruolo. Il Candidato accetta che i Recruiter possano accedere a tutte le sue informazioni contenute nel sito per contattarlo con offerte di lavoro potenzialmente pertinenti. Le informazioni verranno estratte dal CV e archiviate separatamente nel sito. Queste informazioni possono essere rese accessibili ai Recruiter.",
 	"arenella-app-cookies-text7": "Le informazioni dei Recruiter saranno conservate nel Sistema per tutta la durata dei loro abbonamenti. Dopo di che i loro dati saranno rimossi o i riferimenti identificabili al Recruiter saranno sostituiti. Questo aggiornamento sarà periodico, ma faremo del nostro meglio per effettuare questi aggiornamenti il più rapidamente possibile.",
@@ -111,13 +111,15 @@
 	"arenella-app-menu-suggestions": "Candidati",
 	"arenella-app-no-credits-text": "Sfortunatamente hai utilizzato i tuoi crediti per questa settimana. Riceverai nuovi crediti la prossima settimana.",
 	"arenella-app-no-credits-title": "0 crediti rimanenti",
+	"arenella-app-paid-feature": "Funzionalità Pro",
+	"arenella-app-paid-feature-text": "Questa funzionalità è disponibile solo per gli utenti con un abbonamento a pagamento.",
 	"arenella-app-validation-errors-text": "Purtroppo non è stato possibile eseguire le azioni perché:",
 	"arenella-app-validation-errors-title": "Errori di convalida",
 	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Indirizzo aziendale",
-	"arenella-contact-company-name": "Nome della ditta",
+	"arenella-contact-company-name": "Nome",
 	"arenella-contact-company-registration-email": "E-mail",
-	"arenella-contact-company-registration-number": "Numero di registrazione della società",
+	"arenella-contact-company-registration-number": "Partitia IVA",
 	"arenella-contact-title": "Contatto",
 	"arenella-create-candidate-additional-info-text": "Fornendo queste informazioni aggiuntive facoltative contribuirai a creare il tuo profilo\ndistinguersi dai reclutatori",
 	"arenella-create-candidate-additional-info-title": "Informazioni aggiuntive",
@@ -161,7 +163,7 @@
 	"arenella-faqs-q1-question": "C'è un costo per l'abbonamento?",
 	"arenella-faqs-q4-answer": "No. Non ci sono margini, commissioni o costi extra da pagare. Se ti attieni all'abbonamento basato sul credito non ci sono costi. Se hai scelto l'abbonamento a pagamento, l'unico costo è l'abbonamento stesso.",
 	"arenella-faqs-q4-question": "Ci sono costi aggiuntivi?",
-	"arenella-faqs-q5-answer": "La fattura viene inviata da Arenella BV, una società olandese registrata nei Paesi Bassi.",
+	"arenella-faqs-q5-answer": "La fattura viene inviata da una Partita IVA registrata in Italia",
 	"arenella-faqs-q5-question": "Da dove verrà la fattura per l'abbonamento?",
 	"arenella-faqs-q6-answer": "Sì. Quando visualizzi/scarichi il CV dei candidati, vedrai i loro dati di contatto. Puoi chiamarli direttamente.",
 	"arenella-faqs-q6-question": "Posso contattare direttamente i candidati?",
@@ -610,7 +612,7 @@
 	"arenella-recruiter-signup-subscriptions-text2": "Download 100% gratuiti di CV e informazioni di contatto dei candidati IT disponibili",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Margini da pagare",
 	"arenella-recruiter-signup-subscriptions-text4": "0 Commissione da pagare",
-	"arenella-recruiter-signup-subscriptions-text5": "Il tuo contratto è diretto con il candidato e non tramite Arenella BV",
+	"arenella-recruiter-signup-subscriptions-text5": "Il tuo contratto è diretto con il candidato, non tramite una terza parte",
 	"arenella-recruiter-signup-subscriptions-text6": "I candidati hanno condiviso i loro CV e gradirebbero una chiamata da un reclutatore",
 	"arenella-recruiter-signup-subscriptions-text7": "La disponibilità dei candidati è verificata ogni due settimane. I candidati sono attivamente alla ricerca",
 	"arenella-recruiter-signup-surname": "Cognome",
