--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -71,7 +71,7 @@
 	"arenella-app-cookies-text2": "De sitebezoeker wordt niet gevolgd door de applicatie en wij verzamelen geen statistieken over sitebezoekers.",
 	"arenella-app-cookies-text3": "We slaan informatie op over de recruiters die nodig zijn om hen te identificeren en contact met hen op te nemen. Informatie over de acties die de recruiter uitvoert, kan worden opgeslagen om inzicht te verschaffen met betrekking tot de\nindividuele recruiters gebruik maken van de site en om de site te helpen verbeteren. De gegevens van Recruiters worden niet zonder hun uitdrukkelijke toestemming met derden gedeeld.",
 	"arenella-app-cookies-text4": "Kandidaten worden alleen met hun toestemming of via toestemming van het bedrijf waar ze in dienst zijn, aan het systeem toegevoegd. De kandidateninformatie is intern in het systeem beschikbaar\nkan ook worden gedownload door de Recruiters om contact met hen op te nemen over mogelijk interessante functies. De CV's van kandidaten kunnen ook worden gedownload door de Recruiters.",
-	"arenella-app-cookies-text5-a": "Door deze Algemene Voorwaarden te accepteren, gaat de recruiter ermee akkoord dat het gebruik van de site en de gegevens die via de site toegankelijk zijn, geheel voor eigen risico zijn. De Recruiter gaat ermee akkoord dat Arenella BV dat is\nop geen enkele wijze verantwoordelijk voor eventuele negatieve gevolgen voor hen of hun bedrijf door het gebruik van deze site of de gegevens of bestanden die deze site bevat.",
+	"arenella-app-cookies-text5-a": "Door deze Algemene Voorwaarden te accepteren, stemt de recruiter ermee in dat het gebruik van de website en de via de website toegankelijke gegevens volledig op eigen risico is. De recruiter stemt ermee in dat de website en de eigenaar van de website op geen enkele wijze verantwoordelijk zijn voor eventuele negatieve gevolgen voor hen of hun bedrijf als gevolg van het gebruik van deze website of de gegevens of bestanden die erop staan.",
 	"arenella-app-cookies-text5-b": "Door deze algemene voorwaarden te accepteren, gaat de recruiter ermee akkoord dat het gebruik van de gegevens van de Kandidaat beperkt is tot het uitsluitende gebruik van contact met de Kandidaten over mogelijk relevante vacatures.\ndie voor de Kandidaat interessant kunnen zijn. De gegevens van de Kandidaten mogen zonder uitdrukkelijke toestemming van de Kandidaten niet aan derden worden doorgegeven en mogen niet worden opgeslagen in de eigen administratie van Recruiters.\nsysteem langer dan nodig is om het wervingsproces voor de Kandidaat die zij proberen te plaatsen te voltooien.",
 	"arenella-app-cookies-text6": "Door het CV te uploaden of op de site aan te bieden, heeft de Kandidaat ermee ingestemd dat zijn CV en informatie worden gedeeld met het netwerk van Recruiters die al actief zijn en dat nog zullen doen.\nvervolgens gebruik maken van de website. Een Recruiter is elke persoon of elk bedrijf met een account op de website dat op zoek is naar Kandidaten voor een nieuwe rol.\nDe Kandidaat gaat ermee akkoord dat de Recruiters toegang hebben tot al hun informatie op de site om hen te contacteren met potentieel relevante vacatures. Informatie zal zijn\nGeëxtraheerd uit het CV en apart opgeslagen op de site. Deze informatie kan toegankelijk worden gemaakt voor de Recruiters.",
 	"arenella-app-cookies-text7": "Informatie over recruiters wordt gedurende de looptijd van hun abonnementen in het systeem opgeslagen. Daarna worden hun gegevens verwijderd of worden er identificeerbare verwijzingen naar de Recruiter gemaakt\nvervangen. Deze update zal periodiek zijn, maar we zullen ons best doen om deze updates zo snel mogelijk uit te voeren.",
@@ -111,13 +111,15 @@
 	"arenella-app-menu-suggestions": "Kandidaten",
 	"arenella-app-no-credits-text": "Helaas heb je je tegoeden voor deze week opgebruikt. Volgende week ontvang je nieuwe credits.",
 	"arenella-app-no-credits-title": "0 Credits resterend",
+	"arenella-app-paid-feature": "Pro-functie",
+	"arenella-app-paid-feature-text": "Deze functie is alleen beschikbaar voor gebruikers met een betaald abonnement.",
 	"arenella-app-validation-errors-text": "Helaas was het niet mogelijk om de acties uit te voeren omdat:",
 	"arenella-app-validation-errors-title": "Validatiefouten",
 	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Bedrijfsadres",
-	"arenella-contact-company-name": "Bedrijfsnaam",
+	"arenella-contact-company-name": "Naam",
 	"arenella-contact-company-registration-email": "E-mail",
-	"arenella-contact-company-registration-number": "Bedrijfsregistratienummer",
+	"arenella-contact-company-registration-number": "BTW-nummer",
 	"arenella-contact-title": "Contact",
 	"arenella-create-candidate-additional-info-text": "Door deze optionele aanvullende informatie te verstrekken, laat u uw profiel extra opvallen voor de recruiters",
 	"arenella-create-candidate-additional-info-title": "Extra informatie",
@@ -161,7 +163,7 @@
 	"arenella-faqs-q1-question": "Zijn er kosten verbonden aan een abonnement?",
 	"arenella-faqs-q4-answer": "Nee. Er zijn geen marges, commissies of extra kosten te betalen. Als u vasthoudt aan het op krediet gebaseerde abonnement, zijn er helemaal geen kosten verbonden. Als u voor het betaalde abonnement heeft gekozen, zijn de enige kosten het abonnement zelf.",
 	"arenella-faqs-q4-question": "Zijn er extra kosten?",
-	"arenella-faqs-q5-answer": "De factuur wordt verzonden vanuit Arenella BV, een Nederlands geregistreerd bedrijf in Nederland.",
+	"arenella-faqs-q5-answer": "De factuur is verzonden vanuit een in Italië geregistreerde Partita IVA",
 	"arenella-faqs-q5-question": "Waar komt de factuur voor het abonnement vandaan?",
 	"arenella-faqs-q6-answer": "Ja. Wanneer u het cv van de kandidaten bekijkt/downloadt, ziet u hun contactgegevens. U kunt ze rechtstreeks bellen.",
 	"arenella-faqs-q6-question": "Kan ik rechtstreeks contact opnemen met de kandidaten?",
@@ -610,7 +612,7 @@
 	"arenella-recruiter-signup-subscriptions-text2": "100% gratis downloads van CV's en contactgegevens van beschikbare IT-kandidaten",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Margins om te betalen",
 	"arenella-recruiter-signup-subscriptions-text4": "0 Commissie om te betalen",
-	"arenella-recruiter-signup-subscriptions-text5": "Uw contract loopt rechtstreeks met de kandidaat en niet via Arenella BV",
+	"arenella-recruiter-signup-subscriptions-text5": "Uw contract loopt rechtstreeks met de kandidaat en niet via een derde partij",
 	"arenella-recruiter-signup-subscriptions-text6": "Kandidaten hebben hun CV gedeeld en zouden graag een telefoontje van een recruiter ontvangen",
 	"arenella-recruiter-signup-subscriptions-text7": "Beschikbaarheid van kandidaten wordt elke twee weken gecontroleerd. De kandidaten zijn actief op zoek",
 	"arenella-recruiter-signup-surname": "Achternaam",
