--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -71,7 +71,7 @@
 	"arenella-app-cookies-text2": "The site visitor is not tracked by the application and we do not collect statistics for site visitors.",
 	"arenella-app-cookies-text3": "We store information about the Recruiters required to identify and contact them. Information about the actions the recruiter performs may be stored to provide insight relating to the \n\t\tindividual recruiters use of the site and to help improve the site. The Recruiters information will not be shared with third parties without their explicit consent. ",
 	"arenella-app-cookies-text4": "Candidates are only added into the system with their consent or via the consent of the company that employs them. The Candidates informaion is available internally in the system and \n\t\tcan also be downloaded by the Recruiters in order to contact them about potentially interesting roles. Candidates CVs can also be downloaded by the Recruiters.",
-	"arenella-app-cookies-text5-a": "By accepting these Terms and Conditions the recruiter agrees that the use of the site and data accessed via the site are entirely at their own risk. The Recruiter agrees that the Arenella BV is \n\t\tin no way responsible for any negative consequences on them or their company from the use of this site or the data or files contained therin.",
+	"arenella-app-cookies-text5-a": "By accepting these Terms and Conditions the recruiter agrees that the use of the site and data accessed via the site are entirely at their own risk. The Recruiter agrees that the site and the sites owner is in no way responsible for any negative consequences on them or their company from the use of this site or the data or files contained therin.",
 	"arenella-app-cookies-text5-b": "By accepting these terms and conditions the recruiter agrees that the use of the Candidate data is limited to the sole use of contacting the Candidates about potentially relevant jobs \n\t\tthat may be of interest to the Candidate. The Candidates data may not be passed on to third parties without the Candidates express permission and may not be stored in the Recruiters own \n\t\tsystem for longer than necessary to complete the recruitment process for the Candidate they are trying to place.\n\t\t",
 	"arenella-app-cookies-text6": "By uploading the CV or providing it to the site the Candidate has aggreed for their CV and information to be shared with the network of Recruiters that are already and will \n\t\tsubsequently make use of the website. A Recruiter is any person or conpany with an account on the website that it looking for Candidates to place in a new role. \n\t\tThe Candidate agrees that the Recruiters can access all their information contained within the site in order to contact them with potentially relevant job openings. Information will be \n\t\textracted from within the CV and stored seperately in the site. This information may be made accessible to the Recruiters.",
 	"arenella-app-cookies-text7": "Recruiters information will be stored in the System for the duration of their subscriptions. After which their data will either be removed or identifiable references to the Recruiter will be \n\t\treplaced. This update will be periodic but the we will make best endevours to make these updates as quickly as possible.",
@@ -111,13 +111,15 @@
 	"arenella-app-menu-suggestions": "Candidates",
 	"arenella-app-no-credits-text": "Unfortunately you have used your credits for this week. You will receive new credits next week.",
 	"arenella-app-no-credits-title": "0 Credits remaining",
+	"arenella-app-paid-feature": "Pro Feature",
+	"arenella-app-paid-feature-text": "This feature is only available to User's with a paid subscription.",
 	"arenella-app-validation-errors-text": "Unfortunately it was not possible to perform the actions because:",
 	"arenella-app-validation-errors-title": "Validation Errors",
 	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Company Address",
-	"arenella-contact-company-name": "Company Name",
+	"arenella-contact-company-name": "Name",
 	"arenella-contact-company-registration-email": "Email",
-	"arenella-contact-company-registration-number": "Company Registration Number",
+	"arenella-contact-company-registration-number": "VAT Number",
 	"arenella-contact-title": "Contact",
 	"arenella-create-candidate-additional-info-text": "By providing this optional additional information you will help to make your profile\n\t\t\t\t\t\t\t\tstand out to the recruiters",
 	"arenella-create-candidate-additional-info-title": "Additional Information",
@@ -161,7 +163,7 @@
 	"arenella-faqs-q1-question": "Is there a charge for subscription",
 	"arenella-faqs-q4-answer": "No. There are no margins, commissions or extra costs to pay. If you stick to the credit based subscription there are no costs at all. If you chose the paid subscription the only cost is the subscription itself.",
 	"arenella-faqs-q4-question": "Are there additional costs",
-	"arenella-faqs-q5-answer": "The invoice is sent from Arenella BV a Dutch registered company in the Netherlands.",
+	"arenella-faqs-q5-answer": "The invoice is sent from from an Italian registered Partita IVA",
 	"arenella-faqs-q5-question": "Where will the invoice for the subscription come from",
 	"arenella-faqs-q6-answer": "Yes. When you view / download the candidates CV you will see their contact details. You can call them directly.",
 	"arenella-faqs-q6-question": "Can I contact the candidates directly",
@@ -610,7 +612,7 @@
 	"arenella-recruiter-signup-subscriptions-text2": "100% free downloads of CVs and contact information of available IT candidates",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Margins to pay",
 	"arenella-recruiter-signup-subscriptions-text4": "0 Commission to pay",
-	"arenella-recruiter-signup-subscriptions-text5": "Your contract is direct with the candidate not via Arenella BV",
+	"arenella-recruiter-signup-subscriptions-text5": "Your contract is direct with the candidate not via a third party.",
 	"arenella-recruiter-signup-subscriptions-text6": "Candidates have shared their CVs and would welcome a call from a recruiter",
 	"arenella-recruiter-signup-subscriptions-text7": "Candidate availability checked every two weeks. The candidates are actively looking",
 	"arenella-recruiter-signup-surname": "Surname",
