--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -608,6 +608,7 @@
 	"arenella-recruiter-signup-subscriptions-paid-text2": "Unbegrenzte CV-Downloads",
 	"arenella-recruiter-signup-subscriptions-paid-text3": "Unbegrenzte Stellenangebote auf Jobbörsen",
 	"arenella-recruiter-signup-subscriptions-paid-text4": "Unbegrenzte Beiträge auf dem Marktplatz",
+	"arenella-recruiter-signup-subscriptions-paid-text5": "Chat-Nachrichtenfunktion",
 	"arenella-recruiter-signup-subscriptions-text1": "100 % kostenloser Zugang zur Site",
 	"arenella-recruiter-signup-subscriptions-text2": "100 % kostenlose Downloads von Lebensläufen und Kontaktdaten verfügbarer IT-Kandidaten",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Zu zahlende Margen",
