--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -608,6 +608,7 @@
 	"arenella-recruiter-signup-subscriptions-paid-text2": "Unlimited CV downloads",
 	"arenella-recruiter-signup-subscriptions-paid-text3": "Unlimited Job board posts",
 	"arenella-recruiter-signup-subscriptions-paid-text4": "Unlimited posts on the Marketplace",
+	"arenella-recruiter-signup-subscriptions-paid-text5": "Chat message feature",
 	"arenella-recruiter-signup-subscriptions-text1": "100% free access to the site",
 	"arenella-recruiter-signup-subscriptions-text2": "100% free downloads of CVs and contact information of available IT candidates",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Margins to pay",
