--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -608,6 +608,7 @@
 	"arenella-recruiter-signup-subscriptions-paid-text2": "Descargas ilimitadas de CV",
 	"arenella-recruiter-signup-subscriptions-paid-text3": "Publicaciones ilimitadas en bolsas de trabajo",
 	"arenella-recruiter-signup-subscriptions-paid-text4": "Publicaciones ilimitadas en el Marketplace",
+	"arenella-recruiter-signup-subscriptions-paid-text5": "Chat-Nachrichtenfunktion",
 	"arenella-recruiter-signup-subscriptions-text1": "Acceso 100% gratuito al sitio",
 	"arenella-recruiter-signup-subscriptions-text2": "Descargas 100% gratuitas de CV e información de contacto de candidatos de TI disponibles",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Márgenes a pagar",
