--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -608,6 +608,7 @@
 	"arenella-recruiter-signup-subscriptions-paid-text2": "Téléchargements illimités de CV",
 	"arenella-recruiter-signup-subscriptions-paid-text3": "Publications illimitées sur le Job board",
 	"arenella-recruiter-signup-subscriptions-paid-text4": "Publications illimitées sur la Marketplace",
+	"arenella-recruiter-signup-subscriptions-paid-text5": "Fonctionnalité de messagerie instantanée",
 	"arenella-recruiter-signup-subscriptions-text1": "Accès 100% gratuit au site",
 	"arenella-recruiter-signup-subscriptions-text2": "Téléchargements 100% gratuits des CV et coordonnées des candidats IT disponibles",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Margins à payer",
