--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -608,6 +608,7 @@
 	"arenella-recruiter-signup-subscriptions-paid-text2": "Download illimitati di CV",
 	"arenella-recruiter-signup-subscriptions-paid-text3": "Post illimitati sulla bacheca di lavoro",
 	"arenella-recruiter-signup-subscriptions-paid-text4": "Post illimitati sul Marketplace",
+	"arenella-recruiter-signup-subscriptions-paid-text5": "Funzionalità di messaggio in chat",
 	"arenella-recruiter-signup-subscriptions-text1": "Accesso al sito 100% gratuito",
 	"arenella-recruiter-signup-subscriptions-text2": "Download 100% gratuiti di CV e informazioni di contatto dei candidati IT disponibili",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Margini da pagare",
