--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -608,6 +608,7 @@
 	"arenella-recruiter-signup-subscriptions-paid-text2": "Onbeperkt CV-downloads",
 	"arenella-recruiter-signup-subscriptions-paid-text3": "Onbeperkte vacatures op de Job board",
 	"arenella-recruiter-signup-subscriptions-paid-text4": "Onbeperkt aantal berichten op de Marktplaats",
+	"arenella-recruiter-signup-subscriptions-paid-text5": "Chatberichtfunctie",
 	"arenella-recruiter-signup-subscriptions-text1": "100% gratis toegang tot de site",
 	"arenella-recruiter-signup-subscriptions-text2": "100% gratis downloads van CV's en contactgegevens van beschikbare IT-kandidaten",
 	"arenella-recruiter-signup-subscriptions-text3": "0 Margins om te betalen",
